--- a/.github/workflows/dns_cf.yml
+++ b/.github/workflows/dns_cf.yml
@@ -1,8 +1,8 @@
 name: 'dns_cf_push'
 
 on:
-  schedule:
-    - cron: '0 */6 * * *'
+    - cron: '10 */24 * * *'
+  workflow_dispatch:
 
 jobs:
   build:
